# UTFPR

algoritmos-e-estrutura-de-dados/sistema-biblioteca/: Readme.md  instrucoes.txt
algoritmos-e-estrutura-de-dados/sistema-biblioteca/Source Code/: Arquivos.c  Encadeada.c  Encadeada.h  Livros.c  Livros.h.save-failed  Sistema.c  Sistema.h  Trabalho Final.cbp  Trabalho Final.depend  Trabalho Final.layout  Usuarios.c  Usuarios.h.save-failed  main.c
banco-de-dados/triggers/: README.md  package.json
banco-de-dados/triggers/prisma/: schema.prisma
banco-de-dados/triggers/sql/: initial_data.sql  triggers.sql
banco-de-dados/triggers/src/controllers/: PersonController.js
calculo-numerico/integracao/regra-de-simpson/: e^x.m
computacao-em-gpu/parallel-simulated-annealing/src/: main.py
programacao-orientada-a-objetos/aa1/: README.md
programacao-orientada-a-objetos/aa1/src/: Roda.java  Simulador.java  Veiculo.java
programacao-orientada-a-objetos/aula4/IntegerSet/: IntegerSet.java
programacao-orientada-a-objetos/aula4/dice/: Dice.java
programacao-orientada-a-objetos/aula4/numerocomplexo/: NumeroComplexo.java
programacao-orientada-a-objetos/aula4/rational/: DemoRational.java  Rational.java
projeto-de-algoritmos/classroom-assingment-problem/src/: greedy_method.py
sistemas-embarcados/zephyr-rtos/: CMakeLists.txt  Kconfig  build.sh  error.txt  flash.sh  prj.conf
sistemas-embarcados/zephyr-rtos/boards/: nucleo_g431rb.conf  nucleo_g431rb.overlay  nucleo_g474re.conf  stm32f3_disco.conf
sistemas-embarcados/zephyr-rtos/src/: fft.c  main.c  stm32f3xx_hal.c
(+21 files in other folders)
